# mace

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/host/: CMakeLists.txt  Human.cpp  Human.h  README.md  detection_output.cpp  openpose-mobilenet.cpp  openpose-mobilenet2.cpp  pafprocess.cpp  pafprocess.h  ssd-mobilenet.cpp
examples/host/models/: MobileNetSSD_deploy_new.prototxt  mobilenet-thin1221.yml  ssd-mobilenet_person_caffe.yml
